feat: upgrades orientdb graalvm resteasy (wip)